--- a/TeacherPortalAs/netlify.toml
+++ b/TeacherPortalAs/netlify.toml
@@ -1,5 +1,13 @@
 [build]
-  command = "dotnet publish -c Release"
+  command = """
+    curl -sSL https://dot.net/v1/dotnet-install.sh > dotnet-install.sh
+    chmod +x dotnet-install.sh
+    ./dotnet-install.sh --channel 8.0
+    ./dotnet-install.sh --channel STS
+    dotnet --info
+    dotnet workload install wasm-tools
+    dotnet publish -c Release
+  """
   publish = "bin/Release/net8.0/publish/wwwroot"
   environment = { NETLIFY_USE_YARN = "false" }
 
